[package]
name = "milli"
version = "0.1.0"
authors = ["SpanishPear <shrey.somaiya@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1"
log = "0.4"
simple-logging = "2.0.2"
unicode-segmentation = "1"

